{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 607,
  "lineage": "7a90e010-abc0-9d4c-58df-5889c3be1b15",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005bba63480e0ea4c",
            "association_id": "eipassoc-0df4ff972411a9c91",
            "domain": "vpc",
            "id": "eipalloc-005bba63480e0ea4c",
            "network_border_group": "us-west-2",
            "network_interface": "eni-093d5f4f695a7bc4d",
            "private_dns": "ip-10-88-0-76.us-west-2.compute.internal",
            "private_ip": "10.88.0.76",
            "public_dns": "ec2-44-235-19-212.us-west-2.compute.amazonaws.com",
            "public_ip": "44.235.19.212",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:internet-gateway/igw-0fbf519a226a466ae",
            "id": "igw-0fbf519a226a466ae",
            "owner_id": "700080227344",
            "tags": {
              "Name": "npi-oregon-dev-igw",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-igw",
              "company": "NGS Pipelines"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "rta-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c68f2f61b1468661",
            "original_route_table_id": "rtb-0ccb48e91cfc9b168",
            "route_table_id": "rtb-0f6dc80bb0ad1b049",
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005bba63480e0ea4c",
            "connectivity_type": "public",
            "id": "nat-085c2541803feffd9",
            "network_interface_id": "eni-093d5f4f695a7bc4d",
            "private_ip": "10.88.0.76",
            "public_ip": "44.235.19.212",
            "subnet_id": "subnet-055bc946ab7a3d117",
            "tags": {
              "Name": "npi-oregon-dev-nat-gateway",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-nat-gateway",
              "company": "NGS Pipelines"
            }
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "aws_eip.nat_gateway_eip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:route-table/rtb-0f6dc80bb0ad1b049",
            "id": "rtb-0f6dc80bb0ad1b049",
            "owner_id": "700080227344",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-085c2541803feffd9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "npi-oregon-dev-private-route-table",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-private-route-table",
              "company": "NGS Pipelines"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:route-table/rtb-00a0fb113d06929c9",
            "id": "rtb-00a0fb113d06929c9",
            "owner_id": "700080227344",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fbf519a226a466ae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "npi-oregon-dev-public-route-table",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-public-route-table",
              "company": "NGS Pipelines"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f99d3c235807c1a8",
            "route_table_id": "rtb-0f6dc80bb0ad1b049",
            "subnet_id": "subnet-07f34c5ba1f54cc09"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0290913e552baa68c",
            "route_table_id": "rtb-0f6dc80bb0ad1b049",
            "subnet_id": "subnet-0f45f6049b93a364e"
          },
          "dependencies": [
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029b38430edaa4c5a",
            "route_table_id": "rtb-0f6dc80bb0ad1b049",
            "subnet_id": "subnet-01159c37e883483a0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "aws_eip.nat_gateway_eip"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0413e18a3249d55b7",
            "route_table_id": "rtb-0f6dc80bb0ad1b049",
            "subnet_id": "subnet-0979bf0da38a823a4"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bea4d43ef095f689",
            "route_table_id": "rtb-00a0fb113d06929c9",
            "subnet_id": "subnet-055bc946ab7a3d117"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ad5d2129864d2ff",
            "route_table_id": "rtb-00a0fb113d06929c9",
            "subnet_id": "subnet-0fa30f015524d724a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0115267a24509ca20",
            "route_table_id": "rtb-00a0fb113d06929c9",
            "subnet_id": "subnet-077f33c0fe9e7e604"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "aws_internet_gateway.igw"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030ca97606c7eb06c",
            "route_table_id": "rtb-00a0fb113d06929c9",
            "subnet_id": "subnet-006b096220046e290"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "reachable_from_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:security-group/sg-03146447e1a351c07",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03146447e1a351c07",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.88.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "npi-oregon-dev-reachable-from-vpc",
            "name_prefix": "",
            "owner_id": "700080227344",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "npi-oregon-dev-reachable-from-vpc",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-reachable-from-vpc",
              "company": "NGS Pipelines"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "reachable_with_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:security-group/sg-046ca2deb3c997ef2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046ca2deb3c997ef2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "npi-oregon-dev-reachable-with-http",
            "name_prefix": "",
            "owner_id": "700080227344",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "npi-oregon-dev-reachable-with-http",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-reachable-with-http",
              "company": "NGS Pipelines"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "reachable_with_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:security-group/sg-09302bd79ea7cd73f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09302bd79ea7cd73f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "npi-oregon-dev-reachable-with-ssh",
            "name_prefix": "",
            "owner_id": "700080227344",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "npi-oregon-dev-reachable-with-ssh",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-reachable-with-ssh",
              "company": "NGS Pipelines"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:subnet/subnet-07f34c5ba1f54cc09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.88.128.0/23",
            "id": "subnet-07f34c5ba1f54cc09",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700080227344",
            "tags": {
              "Name": "npi-oregon-dev-private-subnet-0",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-private-subnet-0",
              "company": "NGS Pipelines"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:subnet/subnet-0f45f6049b93a364e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.88.130.0/23",
            "id": "subnet-0f45f6049b93a364e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700080227344",
            "tags": {
              "Name": "npi-oregon-dev-private-subnet-1",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-private-subnet-1",
              "company": "NGS Pipelines"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:subnet/subnet-01159c37e883483a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.88.132.0/23",
            "id": "subnet-01159c37e883483a0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700080227344",
            "tags": {
              "Name": "npi-oregon-dev-private-subnet-2",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-private-subnet-2",
              "company": "NGS Pipelines"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:subnet/subnet-0979bf0da38a823a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.88.134.0/23",
            "id": "subnet-0979bf0da38a823a4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700080227344",
            "tags": {
              "Name": "npi-oregon-dev-private-subnet-3",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-private-subnet-3",
              "company": "NGS Pipelines"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:subnet/subnet-055bc946ab7a3d117",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.88.0.0/23",
            "id": "subnet-055bc946ab7a3d117",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700080227344",
            "tags": {
              "Name": "npi-oregon-dev-public-subnet-0",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-public-subnet-0",
              "company": "NGS Pipelines"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:subnet/subnet-0fa30f015524d724a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.88.2.0/23",
            "id": "subnet-0fa30f015524d724a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700080227344",
            "tags": {
              "Name": "npi-oregon-dev-public-subnet-1",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-public-subnet-1",
              "company": "NGS Pipelines"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:subnet/subnet-077f33c0fe9e7e604",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.88.4.0/23",
            "id": "subnet-077f33c0fe9e7e604",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700080227344",
            "tags": {
              "Name": "npi-oregon-dev-public-subnet-2",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-public-subnet-2",
              "company": "NGS Pipelines"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:subnet/subnet-006b096220046e290",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.88.6.0/23",
            "id": "subnet-006b096220046e290",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700080227344",
            "tags": {
              "Name": "npi-oregon-dev-public-subnet-3",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-public-subnet-3",
              "company": "NGS Pipelines"
            },
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:vpc/vpc-0cffea4f90e4ab656",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.88.0.0/16",
            "default_network_acl_id": "acl-0b4f563a5ef372d4a",
            "default_route_table_id": "rtb-0f6dc80bb0ad1b049",
            "default_security_group_id": "sg-0be63635bfc7b7932",
            "dhcp_options_id": "dopt-091d793b4683a6b3d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cffea4f90e4ab656",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f6dc80bb0ad1b049",
            "owner_id": "700080227344",
            "tags": {
              "Name": "npi-oregon-dev-vpc",
              "company": "NGS Pipelines"
            },
            "tags_all": {
              "Name": "npi-oregon-dev-vpc",
              "company": "NGS Pipelines"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:700080227344:vpc-endpoint/vpce-09d320ccca51c009f",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-09d320ccca51c009f",
            "owner_id": "700080227344",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00a0fb113d06929c9",
              "rtb-0f6dc80bb0ad1b049"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0cffea4f90e4ab656"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}